import { TemplateDiff } from '@aws-cdk/cloudformation-diff';
import {
  DiffLineOutput,
  DiffRule,
  extractStackDiffOutput,
  generateDiffs,
  generateMarkdown,
  getDiffsDir,
  getSavedDiffs,
  mergeDiffsFromDir,
  saveDiffs
} from '../src/utils/diff';
import { DiffMethod, ExpandStackSelection, StackSelectionStrategy, Toolkit } from '@aws-cdk/toolkit-lib';
import * as cdk from 'aws-cdk-lib';
import * as sns from 'aws-cdk-lib/aws-sns';
import { CloudAssembly } from 'aws-cdk-lib/cx-api';
import { CdkExpressPipeline, CdkExpressPipelineAssembly, ExpressStack } from 'cdk-express-pipeline';
import path from 'node:path';
import * as fs from 'node:fs';
import { CDK_EXPRESS_PIPELINE_JSON_FILE } from '../src/utils/shared';
import * as lambda from 'aws-cdk-lib/aws-lambda';

type AssemblyDiff = {
  assembly: CloudAssembly;
};
type AssemblyDiffFuncArgs = {
  withChange?: boolean;
  outputDir?: string;
};

function testAssembly(opts?: AssemblyDiffFuncArgs): AssemblyDiff {
  if (opts?.outputDir) {
    process.env.CDK_OUTDIR = opts?.outputDir;
  }
  const app = new cdk.App({
    outdir: opts?.outputDir
  });
  const expressPipeline = new CdkExpressPipeline();
  const wave1 = expressPipeline.addWave('wave1');
  const wave1stage1 = wave1.addStage('stage1');
  const stackA = new ExpressStack(app, 'stack-a', wave1stage1, {
    stackName: 'StackA'
  });
  const wave1stage2 = wave1.addStage('wave1stage2');
  const stackB = new ExpressStack(app, 'stack-b', wave1stage2, {
    stackName: 'StackB'
  });
  const stackD = new ExpressStack(app, 'stack-d', wave1stage2, {
    stackName: 'StackD'
  });

  const wave2 = expressPipeline.addWave('wave2');
  const wave2stage1 = wave2.addStage('stage1');
  const stackC = new ExpressStack(app, 'stack-c', wave2stage1, {
    stackName: 'StackC'
  });

  // Tst no change
  new sns.Topic(stackD, 'TopicD', {
    displayName: 'Topic D'
  });

  if (!opts?.withChange) {
    new sns.Topic(stackA, 'TopicA', {
      displayName: 'Topic A'
    });
    new sns.Topic(stackB, 'TopicB', {
      displayName: 'Topic B'
    });
    new sns.Topic(stackB, 'TopicR', {
      topicName: 'Topic R',
      displayName: 'Topic R',
      loggingConfigs: [
        {
          protocol: sns.LoggingProtocol.HTTP
        }
      ]
    });

    const vpc = new cdk.aws_ec2.Vpc(stackC, 'VPC');
    const sg1 = new cdk.aws_ec2.SecurityGroup(stackC, 'SG1', {
      vpc
    });
    sg1.addIngressRule(cdk.aws_ec2.Peer.anyIpv4(), cdk.aws_ec2.Port.tcp(443), 'Allow HTTPS traffic');
    new lambda.Function(stackC, 'Function', {
      runtime: lambda.Runtime.NODEJS_18_X,
      handler: 'index.handler',
      code: lambda.Code.fromInline('exports.handler = async function(event, context) { return "Hello World"; };'),
      environment: {
        key1: 'value1',
        key2: 'value2'
      },
      memorySize: 256,
      vpc: vpc,
      securityGroups: [
        sg1,
        new cdk.aws_ec2.SecurityGroup(stackC, 'SG2', {
          vpc
        })
      ]
    });
    new lambda.Function(stackC, 'Function2', {
      runtime: lambda.Runtime.NODEJS_18_X,
      handler: 'index.handler',
      code: lambda.Code.fromInline('exports.handler = async function(event, context) { return "Hello World"; };'),
      environment: {
        key1: 'value1'
      },
      memorySize: 256
    });
  } else {
    new sns.Topic(stackA, 'TopicA', {
      displayName: 'Topic A Change'
    });
    new sns.Topic(stackC, 'TopicC', {
      displayName: 'Topic C'
    });
    new sns.Topic(stackB, 'TopicR', {
      topicName: 'Topic R should not change',
      displayName: 'Topic R can change',
      enforceSSL: true
    });

    const vpc = new cdk.aws_ec2.Vpc(stackC, 'VPC', {
      vpcName: 'VPC Changed',
      maxAzs: 2
    });
    const sg1 = new cdk.aws_ec2.SecurityGroup(stackC, 'SG1', {
      vpc
    });
    sg1.addIngressRule(cdk.aws_ec2.Peer.anyIpv4(), cdk.aws_ec2.Port.tcp(443), 'Allow HTTPS traffic');
    new lambda.Function(stackC, 'Function', {
      runtime: lambda.Runtime.NODEJS_18_X,
      handler: 'index.handler',
      code: lambda.Code.fromInline('CHANGED CODE'),
      environment: {
        key1: 'value1-change',
        key3: 'value3'
      },
      memorySize: 512,
      vpc: vpc,
      securityGroups: [sg1]
    });

    new lambda.Function(stackC, 'Function2', {
      runtime: lambda.Runtime.NODEJS_18_X,
      handler: 'index.handler',
      code: lambda.Code.fromInline('CHANGED CODE'),
      environment: {
        key1: 'value1-change'
      },
      memorySize: 256
    });
  }

  expressPipeline.synth([wave1, wave2], false, {});
  process.env.CDK_OUTDIR = undefined;

  return {
    assembly: app.synth()
  };
}

async function generateTemplateDiffs(diffFunc: (opts?: AssemblyDiffFuncArgs) => AssemblyDiff, cdkOutChange: string) {
  let cdkDiffOutput = '';
  const cdkToolkit = new Toolkit({
    color: false,
    ioHost: {
      notify: async function (msg) {
        if (msg.level === 'result') {
          cdkDiffOutput += msg.message + '\n';
        }
      },
      requestResponse: async function (msg) {
        if (msg.level === 'result') {
          cdkDiffOutput += msg.message + '\n';
        }
        return msg.defaultResponse;
      }
    }
  });

  if (fs.existsSync(cdkOutChange)) {
    fs.rmSync(cdkOutChange, { recursive: true, force: true });
  }

  // Synth current CDK to file
  const diffBefore = diffFunc({ outputDir: cdkOutChange });
  // Synth changed CDK and only keep in memory
  const diffAfter = diffFunc({ withChange: true });
  const cxAfter = await cdkToolkit.fromAssemblyBuilder(async () => diffAfter.assembly);

  let templateDiffs: { [id: string]: TemplateDiff } = {};
  for (const stack of diffBefore.assembly.stacks) {
    const templateDiff = await cdkToolkit.diff(cxAfter, {
      method: DiffMethod.LocalFile(path.join(cdkOutChange, stack.id + '.template.json')),
      stacks: {
        strategy: StackSelectionStrategy.PATTERN_MUST_MATCH_SINGLE,
        patterns: [stack.id],
        expand: ExpandStackSelection.NONE,
        failOnEmpty: false
      }
    });
    templateDiffs = {
      ...templateDiffs,
      ...templateDiff
    };
  }
  // console.log('cdkConsole');
  // console.log(cdkConsole);

  //Because we are doing a for loop and seperate diff for each stack, we get the line:
  // ✨ Number of stacks with differences: 1
  // at the end of each stack diff, so we need to remove those lines and add a single one at the end
  cdkDiffOutput =
    cdkDiffOutput
      .split('\n')
      .filter((line) => !line.startsWith('✨ Number of stacks with differences:'))
      .join('\n') + `✨ Number of stacks with differences: ${Object.keys(templateDiffs).length}`;

  return { templateDiffs, cdkDiffOutput };
}

describe('diff.ts', () => {
  it('test complex diff markdown - no diff rules', async () => {
    const cdkOut = path.join(__dirname, 'fixtures', 'cdk.out', 'testAssembly');

    // GH Action 1
    const testDiffRes = await generateTemplateDiffs(testAssembly, cdkOut);
    const stackDiffs = await generateDiffs(testDiffRes.templateDiffs, testDiffRes.cdkDiffOutput, []);
    if (stackDiffs) {
      await saveDiffs(stackDiffs, cdkOut);
    }

    // GH Action 2
    const allStackDiffs = getSavedDiffs(cdkOut);
    const shortHandOrder: CdkExpressPipelineAssembly = JSON.parse(
      fs.readFileSync(path.join(cdkOut, CDK_EXPRESS_PIPELINE_JSON_FILE), 'utf-8')
    );
    const markdown = generateMarkdown(shortHandOrder, allStackDiffs);

    // Local inspection
    //fs.writeFileSync('__tests__/diff-output-markdown.md', result);

    expect(markdown).toMatchSnapshot();
  });

  it('test paths', async () => {
    const cdkOut = path.join(__dirname, 'fixtures', 'cdk.out', 'testAssembly');
    const testDiffRes = await generateTemplateDiffs(testAssembly, cdkOut);

    const result: Record<string, string> = {};
    for (const [stackIdName] of Object.entries(testDiffRes.templateDiffs)) {
      const stackId = stackIdName.split(' ')[0];
      result[stackId] = extractStackDiffOutput(stackIdName, testDiffRes.cdkDiffOutput)
        .diffLines.map((l: DiffLineOutput) => l.path + ' >> ' + l.lineContent)
        .join('\n');
    }
    function safeSnapShotMarkdownCompare(str: string) {
      // Ensure that the line after "There were no differences." is an empty line.
      return str.replace(/(There were no differences\.?)\n([^\n])/g, '$1\n\n$2');
    }
    expect(safeSnapShotMarkdownCompare(testDiffRes.cdkDiffOutput)).toMatchSnapshot();
    expect(result).toMatchSnapshot();
  });

  it('test complex diff markdown - diff rules', async () => {
    const cdkOut = path.join(__dirname, 'fixtures', 'cdk.out', 'testAssembly');
    const testDiffRes = await generateTemplateDiffs(testAssembly, cdkOut);

    const shortHandOrder: CdkExpressPipelineAssembly = JSON.parse(
      fs.readFileSync(path.join(cdkOut, CDK_EXPRESS_PIPELINE_JSON_FILE), 'utf-8')
    );

    const tests: Record<string, DiffRule[]> = {
      'Hide all SNS Topics - Resource level': [
        {
          name: 'hide-all-sns-resources',
          type: 'HIDE_RESOURCE',
          path: 'AWS::SNS::Topic.*'
        }
      ],
      'Hide all SNS Topic Changes - Property level': [
        {
          name: 'hide-all-sns-property-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*'
        }
      ],

      'Hide only TopicA - Resource level': [
        {
          name: 'hide-all-topica-resources',
          type: 'HIDE_RESOURCE',
          path: 'AWS::SNS::Topic.TopicA*'
        }
      ],
      'Hide only TopicA changes - Property level': [
        {
          name: 'hide-topica-property-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.TopicA*'
        }
      ],

      'Hide all SNS Topics that have Display Name changes': [
        {
          name: 'hide-topics-with-display-name-changes',
          type: 'HIDE_RESOURCE',
          path: 'AWS::SNS::Topic.*.DisplayName'
        }
      ],
      'Hide all SNS Topic Display Name changes': [
        {
          name: 'hide-topics-display-name-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*.DisplayName'
        }
      ],

      'Hide Lambda changes to all Lambdas with env key1': [
        {
          name: 'hide-env-key1-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::Lambda::Function.*.Environment.Variables.key1'
        }
      ],
      'Hide all Lambda code changes': [
        {
          name: 'hide-code-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::Lambda::Function.*.Code.*'
        }
      ],

      'Hide all tag changes': [
        {
          name: 'hide-all-tag-changes',
          type: 'HIDE_PROPERTIES',
          path: '*.Tags'
        }
      ],

      'Multiple rules': [
        {
          name: 'hide-topics-display-name-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*.DisplayName'
        },
        {
          name: 'hide-topics-topic-name-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*.TopicName'
        }
      ],

      // HIDE_RESOURCE_IF_EMPTY on its own does nothing — properties are still shown, so no resource
      // is hidden. Demonstrates it is truly a post-processing-only rule.
      'HIDE_RESOURCE_IF_EMPTY - standalone, no effect': [
        {
          name: 'hide-sns-if-empty',
          type: 'HIDE_RESOURCE_IF_EMPTY',
          path: 'AWS::SNS::Topic.*'
        }
      ],

      // HIDE_PROPERTIES hides all SNS Topic properties; HIDE_RESOURCE_IF_EMPTY then detects the
      // now-empty resource headers and removes them too.
      'HIDE_RESOURCE_IF_EMPTY - all properties hidden by HIDE_PROPERTIES, resources hidden': [
        {
          name: 'hide-sns-properties',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*'
        },
        {
          name: 'hide-sns-if-empty',
          type: 'HIDE_RESOURCE_IF_EMPTY',
          path: 'AWS::SNS::Topic.*'
        }
      ],

      // HIDE_PROPERTIES only hides DisplayName. TopicA (only had DisplayName) becomes empty so
      // HIDE_RESOURCE_IF_EMPTY hides it. TopicR still has TopicName visible so it stays.
      'HIDE_RESOURCE_IF_EMPTY - some properties remain, resource stays visible': [
        {
          name: 'hide-sns-display-name',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*.DisplayName'
        },
        {
          name: 'hide-sns-if-empty',
          type: 'HIDE_RESOURCE_IF_EMPTY',
          path: 'AWS::SNS::Topic.*'
        }
      ],

      // HIDE_PROPERTIES handles DisplayName; HIDE_RESOURCE_IF_EMPTY targets only TopicR by ResourceId.
      // TopicR still has remaining visible properties so it is NOT hidden despite the rule matching.
      'HIDE_RESOURCE_IF_EMPTY combined with HIDE_PROPERTIES': [
        {
          name: 'hide-topics-display-name-changes',
          type: 'HIDE_PROPERTIES',
          path: 'AWS::SNS::Topic.*.DisplayName'
        },
        {
          name: 'hide-topics-topic-name-if-empty',
          type: 'HIDE_RESOURCE_IF_EMPTY',
          path: 'AWS::SNS::Topic.TopicR*'
        }
      ]
    };

    for (const [name, rules] of Object.entries(tests)) {
      const stackDiffs = await generateDiffs(testDiffRes.templateDiffs, testDiffRes.cdkDiffOutput, rules);
      expect(stackDiffs).toBeDefined();
      const markdown = generateMarkdown(shortHandOrder, stackDiffs);
      expect(markdown).toMatchSnapshot(name);
    }
  });

  it('test undefined', async () => {
    const cdkOut = path.join(__dirname, 'fixtures', 'cdk.out', 'testAssembly');

    function testAssemblyWithUndefined(opts?: AssemblyDiffFuncArgs): AssemblyDiff {
      if (opts?.outputDir) {
        process.env.CDK_OUTDIR = opts?.outputDir;
      }

      const app = new cdk.App({
        outdir: opts?.outputDir
      });
      const expressPipeline = new CdkExpressPipeline();
      const wave1 = expressPipeline.addWave('wave1');
      const wave1stage1 = wave1.addStage('stage1');
      const stackA = new ExpressStack(app, 'stack-a', wave1stage1, {
        stackName: 'StackA'
      });

      if (!opts?.withChange) {
        const apiLambda = new lambda.Function(stackA, 'lambda-api', {
          functionName: 'api',
          code: lambda.Code.fromInline('exports.handler = async function(event, context) { return "Hello World"; };'),
          handler: 'index.handler',
          runtime: lambda.Runtime.NODEJS_22_X,
          memorySize: 1024,
          environment: {
            AWS_NODEJS_CONNECTION_REUSE_ENABLED: '1'
          }
        });
        const apiLambdaUrl = apiLambda.addFunctionUrl({
          authType: lambda.FunctionUrlAuthType.NONE,
          cors: {
            allowedOrigins: ['*'],
            allowedHeaders: ['*']
          }
        });

        const apiOrigin = cdk.Fn.select(2, cdk.Fn.split('/', apiLambdaUrl.url));
        new cdk.CfnOutput(stackA, 'Lambda API Host', { value: apiLambdaUrl.url });
        new cdk.CfnOutput(stackA, 'Lambda API Origin', { value: apiOrigin });
      }

      expressPipeline.synth([wave1], false, {});
      process.env.CDK_OUTDIR = undefined;

      return {
        assembly: app.synth()
      };
    }

    const testDiffRes = await generateTemplateDiffs(testAssemblyWithUndefined, cdkOut);
    const stackDiffs = await generateDiffs(testDiffRes.templateDiffs, testDiffRes.cdkDiffOutput, []);
    if (stackDiffs) {
      await saveDiffs(stackDiffs, cdkOut);
    }

    // GH Action 2
    const allStackDiffs = getSavedDiffs(cdkOut);
    const shortHandOrder: CdkExpressPipelineAssembly = JSON.parse(
      fs.readFileSync(path.join(cdkOut, CDK_EXPRESS_PIPELINE_JSON_FILE), 'utf-8')
    );
    const markdown = generateMarkdown(shortHandOrder, allStackDiffs);

    expect(markdown).toMatchSnapshot();
  });
});

describe('mergeDiffsFromDir', () => {
  const tmpBase = path.join(__dirname, 'fixtures', 'merge-test');

  beforeEach(() => {
    fs.rmSync(tmpBase, { recursive: true, force: true });
  });

  afterEach(() => {
    fs.rmSync(tmpBase, { recursive: true, force: true });
  });

  it('merges JSON files from multiple source directories into the target diffs directory', () => {
    const outputDir = path.join(tmpBase, 'output');
    const src1 = getDiffsDir(path.join(tmpBase, 'cache-0'));
    const src2 = getDiffsDir(path.join(tmpBase, 'cache-1'));

    // Simulate two separate cache restores, each containing different stack diff files
    fs.mkdirSync(src1, { recursive: true });
    fs.mkdirSync(src2, { recursive: true });
    fs.writeFileSync(path.join(src1, 'wave1_stage1_stack-a.json'), JSON.stringify({ stack: 'a' }));
    fs.writeFileSync(path.join(src2, 'wave1_stage2_stack-b.json'), JSON.stringify({ stack: 'b' }));

    mergeDiffsFromDir(src1, outputDir);
    mergeDiffsFromDir(src2, outputDir);

    const targetDir = getDiffsDir(outputDir);
    const files = fs.readdirSync(targetDir);
    expect(files).toContain('wave1_stage1_stack-a.json');
    expect(files).toContain('wave1_stage2_stack-b.json');
    expect(JSON.parse(fs.readFileSync(path.join(targetDir, 'wave1_stage1_stack-a.json'), 'utf-8'))).toEqual({
      stack: 'a'
    });
    expect(JSON.parse(fs.readFileSync(path.join(targetDir, 'wave1_stage2_stack-b.json'), 'utf-8'))).toEqual({
      stack: 'b'
    });
  });

  it('does nothing when source directory does not exist', () => {
    const outputDir = path.join(tmpBase, 'output');
    const nonExistent = path.join(tmpBase, 'does-not-exist', 'cdk-express-pipeline', 'diffs');

    // Should not throw
    expect(() => mergeDiffsFromDir(nonExistent, outputDir)).not.toThrow();
    expect(fs.existsSync(getDiffsDir(outputDir))).toBe(false);
  });

  it('skips non-JSON files in the source directory', () => {
    const outputDir = path.join(tmpBase, 'output');
    const src = getDiffsDir(path.join(tmpBase, 'cache-0'));

    fs.mkdirSync(src, { recursive: true });
    fs.writeFileSync(path.join(src, 'stack-a.json'), JSON.stringify({ stack: 'a' }));
    fs.writeFileSync(path.join(src, 'README.txt'), 'not a diff');

    mergeDiffsFromDir(src, outputDir);

    const targetDir = getDiffsDir(outputDir);
    const files = fs.readdirSync(targetDir);
    expect(files).toContain('stack-a.json');
    expect(files).not.toContain('README.txt');
  });
});
